# mokujin

./: .gitignore  LICENSE  README.md  example_usage.py  pyproject.toml
mokujin_rng/: __init__.py  fair_roll.py  rarity.py
tests/: test_fair_roll.py
