[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "my_algorithm"
version = "0.1.0"
description = "A weighted rarity RNG and provably fair loot selection library."
authors = [{ name = laasilva", email = "laasilva@proton.me" }]
readme = "README.md"
requires-python = ">=3.9"
license = { text = "LGPL-3.0-or-later" }
keywords = ["rng", "lootbox", "weighted", "random", "provably-fair", "cryptography"]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Games/Entertainment :: Simulation",
]

dependencies = []
